Removed StandardModel_numass models; added clarifications in model descriptions; removed & updated some yaml files.
	deleted:    ../Models/include/gambit/Models/models/StandardModel_numass.hpp
	deleted:    ../Models/src/models/StandardModel_numass.cpp
	modified:   ../config/models.dat
	deleted:    ../yaml_files/CosmoBitDEV_LCDMt_1linearInf_multinest.yaml
	deleted:    ../yaml_files/CosmoBitDEV_LCDMt_1mono32Inf_multinest.pip
	deleted:    ../yaml_files/CosmoBitDEV_LCDMt_1mono32Inf_multinest.yaml
	deleted:    ../yaml_files/CosmoBitDEV_LCDMt_multinest.pip
	deleted:    ../yaml_files/CosmoBitDEV_LCDMt_quad1Inf_multinest.pip
	deleted:    ../yaml_files/CosmoBitDEV_LCDMt_quad1Inf_multinest.yaml
	deleted:    ../yaml_files/CosmoBitDEV_LCDMt_quar1Inf_multinest.pip
	deleted:    ../yaml_files/CosmoBitDEV_LCDMt_quar1Inf_multinest.yaml
	deleted:    ../yaml_files/CosmoBitDEV_LCDMt_smashInf_multinest.pip
	deleted:    ../yaml_files/CosmoBitDEV_LCDMt_smashInf_multinest.yaml
	deleted:    ../yaml_files/CosmoBit_LCDMt_inflation_multinest.yaml
	deleted:    ../yaml_files/CosmoBit_LCDMt_multinest.yaml
	modified:   ../yaml_files/CosmoBit_exoClass.yaml
	modified:   ../yaml_files/CosmoBit_inflationTest.yaml
	modified:   ../yaml_files/CosmoBit_testCosmo.yaml
	modified:   ../yaml_files/CosmoBit_testMP.yaml
	modified:   ../yaml_files/CosmoBit_tutorial.yaml

--- a/yaml_files/CosmoBit_exoClass.yaml
+++ b/yaml_files/CosmoBit_exoClass.yaml
@@ -93,10 +93,6 @@ ObsLikes:
     module:       NeutrinoBit
     type:         bool
 
-  - purpose:      LogLike
-    capability:   Planck_nuisance_prior_loglike
-    module:       CosmoBit
-    type:         double
 
   - purpose:      LogLike
     capability:   Planck_highl_loglike
@@ -113,12 +109,6 @@ ObsLikes:
   - purpose:      Obs
     capability:   Omega0_m
     function:     get_Omega0_m_classy 
-
-  - purpose:      LogLike
-    capability:   Pantheon_LogLike
-
-  - purpose:      LogLike
-    capability:   BAO_LogLike
 
   - purpose:      Observable
     capability:   Omega0_r
@@ -145,8 +135,8 @@ ObsLikes:
 Rules:
 
   # classy (class through python wrapper)
-  - capability: set_classy_parameters
-    function: set_classy_parameters_LCDM
+  - capability: baseline_classy_input
+    function: set_baseline_classy_input
     options:
       classy_dict:
         output: "tCl lCl pCl"   # classy + MP: even when no output specified all spectra etc. the likelihoods need
@@ -185,18 +175,6 @@ Rules:
       # still need to write a proper patch for MPLike backend & test all Likes
       Observables:
         WiggleZ: default
-
-  #- capability: Omega0_r
-  #  function: get_Omega0_ur_classy
-
-  - capability: sigma8_LogLike
-    function: compute_sigma8_LogLike
-    options:
-      DataFile: "Planck_SZ_MontePython.dat"
-
-  - capability: BAO_LogLike
-    options:
-      DataFile:  BAO_2014.dat
 
   - capability: Omega0_m
     function: compute_Omega0_m
