--- a/yaml_files/CosmoBit_testDecay.yaml
+++ b/yaml_files/CosmoBit_testDecay.yaml
@@ -170,9 +170,14 @@ Rules:
 
   - capability: BBN_abundances
     options:
-      correlation_matrix: [[1.0,0.2],[0.2,1.0]]
-      relative_errors: [1e-3,1e-2]
-      elements: [Yp,D]
+      elements: [Yp, D, He3, Be7, Li7]
+      correlation_matrix: [[+1.000e00, +1.524e-2, +2.667e-2, +2.303e-2, +2.429e-2],
+                           [+1.524e-2, +1.000e00, -8.160e-1, -3.775e-1, -3.653e-1],
+                           [+2.667e-2, -8.160e-1, +1.000e00, +3.897e-1, +3.780e-1],
+                           [+2.303e-2, -3.775e-1, +3.897e-1, +1.000e00, +9.974e-1],
+                           [+2.429e-2, -3.653e-1, +3.780e-1, +9.974e-1, +1.000e00]]
+      relative_errors: [1.348e-3, 1.596e-2, 1.618e-2, 6.788e-2, 6.579e-2]
+
 
    # Allow for negative values of dNeff_BBN and dNeffBBN_dNeffCMB?
    #  (default: No)
