--- a/yaml_files/CosmoBit_tutorial.yaml
+++ b/yaml_files/CosmoBit_tutorial.yaml
@@ -281,17 +281,22 @@ Rules:
   
   # error calculation precision settings for AltterBBN
   # (use 1 and 0 to speed up Helium abundance calculation for testing)
+  # (For more precise calculations, use 3 or 7)
   - capability: AlterBBN_setInput
     options:
-      failsafe: 1
+      failsafe: 3
       err: 0
 
   # correlation matrix for BBN error calculation todo explain what that is!
   - capability: BBN_abundances
     options:
-      correlation_matrix: [[1.0,0.2],[0.2,1.0]]
-      relative_errors: [1e-3,1e-2]
-      elements: [Yp,D]
+      elements: [Yp, D, He3, Be7, Li7]
+      correlation_matrix: [[+1.000e00, +1.524e-2, +2.667e-2, +2.303e-2, +2.429e-2],
+                           [+1.524e-2, +1.000e00, -8.160e-1, -3.775e-1, -3.653e-1],
+                           [+2.667e-2, -8.160e-1, +1.000e00, +3.897e-1, +3.780e-1],
+                           [+2.303e-2, -3.775e-1, +3.897e-1, +1.000e00, +9.974e-1],
+                           [+2.429e-2, -3.653e-1, +3.780e-1, +9.974e-1, +1.000e00]]
+      relative_errors: [1.348e-3, 1.596e-2, 1.618e-2, 6.788e-2, 6.579e-2]
 
 
   # ---- MontePython Likelihoods -----
