- made cosmoCompute errors severe, we should hand pick errors that we allow in a scan - added checks in classy & exo classy if the k ranges of passed primordial power spectrum are consistent and large enoguh. Throw proper error if not. - added print out in primordial_ps::fill_k -> atm it gets filled with len values of kmin -> CLASS fails with severe error, reproduce with CosmoBit_inflationTest.yaml
	modified:   Backends/patches/classy/2.6.3/classy_2.6.3.diff
	modified:   Backends/patches/classy/exo_2.7.0/classy_exo_2.7.0.diff
	modified:   Backends/src/frontends/classy_2_6_3.cpp
	modified:   Backends/src/frontends/classy_exo_2_7_0.cpp
	modified:   CosmoBit/src/CosmoBit_types.cpp
	modified:   yaml_files/CosmoBit_inflationTest.yaml

--- a/yaml_files/CosmoBit_inflationTest.yaml
+++ b/yaml_files/CosmoBit_inflationTest.yaml
@@ -142,12 +142,13 @@ Rules:
 # For calculating the full power spectrum P(k).  Samples in uniform increments in log(k).
       #calc_full_pk: 0
       numsteps: 100
-      kmin: 1e-7
-      kmax: 1e6
+      k_min: 1e-7
+      k_max: 1e6
   
-  #- capability:    get_classy_cosmo_object
-  #    backends:
-  #    - {function: backend: classy, version: 2.6.3}
+  - capability: get_classy_cosmo_object
+    function: get_classy_cosmo_object
+    backends:
+    - {capability: get_classy_cosmo_object, backend: classy, version: 2.6.3}
 
   #- capability: get_classy_cosmo_object
   #  backends:
@@ -157,8 +158,8 @@ Rules:
     function: init_classy_cosmo_container_with_MPLike
   
   - capability: set_classy_parameters
-    function: set_classy_parameters_parametrised_ps
-    #function: set_classy_parameters_primordial_ps
+    #function: set_classy_parameters_parametrised_ps
+    function: set_classy_parameters_primordial_ps
     module: CosmoBit
 
   - capability: baseline_classy_input
