Renaming the "dNeff" parameters into "dNu" to avoid confusion
	modified:       Backends/include/gambit/Backends/frontends/AlterBBN_2_0.hpp
	modified:       Backends/include/gambit/Backends/frontends/AlterBBN_2_1.hpp
	modified:       CosmoBit/include/gambit/CosmoBit/CosmoBit_rollcall.hpp
	modified:       CosmoBit/src/CosmoBit.cpp
	modified:       Models/include/gambit/Models/models/Axions.hpp
	modified:       Models/include/gambit/Models/models/CosmoModels.hpp
	modified:       Models/src/models/Axions.cpp
	modified:       Models/src/models/CosmoModels.cpp
	modified:       config/capabilities.dat
	modified:       config/models.dat
	modified:       yaml_files/CosmoBit_exoClass.yaml
	modified:       yaml_files/CosmoBit_inflationTest.yaml
	modified:       yaml_files/CosmoBit_smashInfl.yaml
	modified:       yaml_files/CosmoBit_testCosmo.yaml
	modified:       yaml_files/CosmoBit_testDecay.yaml
	modified:       yaml_files/CosmoBit_testMP.yaml
	modified:       yaml_files/CosmoBit_tutorial.yaml
	 renamed:       yaml_files/include/dNeffBBN_dNeffCMB.yaml -> yaml_files/include/dNurBBN_dNurCMB.yaml
	 renamed:       yaml_files/include/dNeffCMB.yaml -> yaml_files/include/dNurCMB.yaml
	 renamed:       yaml_files/include/etaBBN_rBBN_rCMB_dNeffBBN_dNeffCMB.yaml -> yaml_files/include/etaBBN_rBBN_rCMB_dNurBBN_dNurCMB.yaml
	 renamed:       yaml_files/include/rBBN_rCMB_dNeffBBN_dNeffCMB.yaml -> yaml_files/include/rBBN_rCMB_dNurBBN_dNurCMB.yaml

--- a/yaml_files/CosmoBit_exoClass.yaml
+++ b/yaml_files/CosmoBit_exoClass.yaml
@@ -25,10 +25,10 @@ Parameters:
  #etaBBN:                             !import include/etaBBN.yaml
  #rCMB:                               !import include/rCMB.yaml
  #rBBN_rCMB:                          !import include/rBBN_rCMB.yaml
- #dNeffCMB:                           !import include/dNeffCMB.yaml
- #dNeffBBN_dNeffCMB:                  !import include/dNeffBBN_dNeffCMB.yaml
- #rBBN_rCMB_dNeffBBN_dNeffCMB:        !import include/rBBN_rCMB_dNeffBBN_dNeffCMB.yaml
- etaBBN_rBBN_rCMB_dNeffBBN_dNeffCMB: !import include/etaBBN_rBBN_rCMB_dNeffBBN_dNeffCMB.yaml
+ #dNurCMB:                           !import include/dNurCMB.yaml
+ #dNurBBN_dNurCMB:                  !import include/dNurBBN_dNurCMB.yaml
+ #rBBN_rCMB_dNurBBN_dNurCMB:        !import include/rBBN_rCMB_dNurBBN_dNurCMB.yaml
+ etaBBN_rBBN_rCMB_dNurBBN_dNurCMB: !import include/etaBBN_rBBN_rCMB_dNurBBN_dNurCMB.yaml
 
  # neutrino masses
  StandardModel_mNudiff: !import include/StandardModel_mNudiff_both_scan.yaml
