--- a/yaml_files/include/dNurBBN_dNurCMB.yaml
+++ b/yaml_files/include/dNurBBN_dNurCMB.yaml
@@ -1,10 +1,13 @@
 ###########################################################################
-## Parameter of dNeffCMB
+## Parameter of dNurBBN_dNurCMB
 ##
 ## Patrick Stoecker <stoecker@physik.rwth-aachen.de>
 ## 2019, July
 ##########################################################################
 
-dNeff_CMB:
+dNur_CMB:
+  prior_type: flat
+  range: [0.,2.]
+dNur_BBN:
   prior_type: flat
   range: [0.,2.]
