Add model for energy injection by prompt annihilation into electrons and/or photons
	modified:       CosmoBit/include/gambit/CosmoBit/CosmoBit_rollcall.hpp
	modified:       CosmoBit/src/CosmoBit.cpp
	modified:       Models/include/gambit/Models/models/CosmoEnergyInjection.hpp
	modified:       Models/src/models/CosmoEnergyInjection.cpp
	modified:       config/capabilities.dat
	modified:       config/models.dat
	modified:       yaml_files/CosmoBit_exoClass.yaml
	new file:       yaml_files/include/AnnihilatingDM_general_scan.yaml

--- a/yaml_files/CosmoBit_exoClass.yaml
+++ b/yaml_files/CosmoBit_exoClass.yaml
@@ -43,6 +43,7 @@ Parameters:
  #Planck_lite: !import include/Planck_2018/Planck_lite_gauss.yaml
 
  # model parameters for "DecayingDM_general"
+ #AnnihilatingDM_general: !import include/AnnihilatingDM_general_scan.yaml
  DecayingDM_general: !import include/DecayingDM_general_scan.yaml
 
 #======== Prior setup ========
