Update for cmake 3.12 	modified:   CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ foreach(p
   CMP0054 # CMake 3.1
   CMP0063 # CMake 3.3.2
   CMP0068 # CMake 3.9.1
+  CMP0074 # CMake 3.12
   )
   if(POLICY ${p})
     cmake_policy(SET ${p} NEW)
