--- a/yaml_files/CosmoBit_testMP.yaml
+++ b/yaml_files/CosmoBit_testMP.yaml
@@ -22,13 +22,32 @@ Parameters:
  LCDM: !import include/LCDM_scan.yaml        # base LCDM
 
  # Everything Neff and eta related
- etaBBN: !import include/etaBBN.yaml
+ #etaBBN: !import include/etaBBN.yaml
+ rBBN_rCMB_dNeffBBN_dNeffCMB:
+  dNeff_BBN: 0.698708
+  dNeff_CMB: 0.388434
+  r_BBN: 1.08566
+  r_CMB: 0.947919
+
+  #dNeff_CMB: 
+  #  prior_type: flat
+  #  range: [0,1.0]
+  #dNeff_BBN: 
+  #  prior_type: flat
+  #  range: [0,1.0]
+  #r_CMB: 
+  #  prior_type: flat
+  #  range: [0.8,1.2]
+  #r_BBN: 
+  #  prior_type: flat
+  #  range: [0.8,1.2]
+  
 
  # neutrino masses
  StandardModel_mNudiff: !import include/StandardModel_mNudiff_both_scan.yaml
 
  # Cosmological nuisance parameters (except for Planck CMB Likelihoods) 
- cosmo_nuisance_params_Pantheon: !import include/cosmo_nuisance_params_Pantheon.yaml
+ #cosmo_nuisance_params_Pantheon: !import include/cosmo_nuisance_params_Pantheon.yaml
 
 #======== Prior setup ========
 Priors:
@@ -56,13 +75,17 @@ Scanner:
 
     random:
       plugin: random
-      point_number: 50
+      point_number: 2
       like:  LogLike
 
 #======== Observables of interest ========
 ObsLikes:
  
   # The total lnL from MontePython
+  - purpose:      Observable
+    capability:   Neff
+    type:         double
+    
   - purpose:      LogLike
     capability:   MP_Combined_LogLike
     module:       CosmoBit
@@ -84,8 +107,8 @@ Rules:
 
 
   # classy (class through python wrapper)
-  - capability: set_classy_parameters
-    function: set_classy_parameters_LCDM
+  - capability: baseline_classy_input
+    function: set_baseline_classy_input
     options:
       #l_max: 1000
       # /\
@@ -110,7 +133,7 @@ Rules:
       #Likelihoods: ["bao","Pantheon","Planck_SZ",]  
       Likelihoods: 
         bao_smallz_2014: default
-        Pantheon: default #,"Planck_SZ"]  
+        #Pantheon: default #,"Planck_SZ"]  
       # should eventually be possible to choose any MP like, atm only bao, Pantheon, Planck_SZ (& kids after 
       # downloading data and when commenting out line 'parser_mp.existing_file(fname)', will include that into 
       # build step soon) safe to use;
@@ -122,8 +145,18 @@ Rules:
   # to speed up Neff calc for testing
   - capability: AlterBBN_setInput
     options:
-      failsafe: 1
+      failsafe: 3
       err: 1
+
+  - capability: BBN_abundances
+    options:
+      elements: [Yp, D, He3, Be7, Li7]
+      correlation_matrix: [[+1.000e00, +1.524e-2, +2.667e-2, +2.303e-2, +2.429e-2],
+                            [+1.524e-2, +1.000e00, -8.160e-1, -3.775e-1, -3.653e-1],
+                            [+2.667e-2, -8.160e-1, +1.000e00, +3.897e-1, +3.780e-1],
+                            [+2.303e-2, -3.775e-1, +3.897e-1, +1.000e00, +9.974e-1],
+                            [+2.429e-2, -3.653e-1, +3.780e-1, +9.974e-1, +1.000e00]]
+      relative_errors: [1.348e-3, 1.596e-2, 1.618e-2, 6.788e-2, 6.579e-2]
 
   - capability: T_cmb
     options:
