Added k_pivot and N_pivot to parametrised pp type, added check for double entries in classy dict to functions set_classy_parameters_parametrised_ps and set_classy_parameters_primordial_ps
	modified:   Backends/src/frontends/classy_2_6_3.cpp
	modified:   Backends/src/frontends/classy_exo_2_7_0.cpp
	modified:   CosmoBit/include/gambit/CosmoBit/CosmoBit_types.hpp
	modified:   CosmoBit/src/CosmoBit.cpp
	modified:   CosmoBit/src/CosmoBit_types.cpp
	modified:   yaml_files/CosmoBit_inflationTest.yaml

--- a/yaml_files/CosmoBit_inflationTest.yaml
+++ b/yaml_files/CosmoBit_inflationTest.yaml
@@ -161,6 +161,7 @@ Rules:
     options:
       classy_dict:
         output: tCl
+        #P_k_ini type : analytic_Pk
   
   #- capability: set_classy_parameters
   #  function: set_classy_parameters_parametrised_ps
