Renamed all cosmo nuisance parameter models from cosmo_nuisance_params.. to cosmo_nuisance..
	modified:   CosmoBit/include/gambit/CosmoBit/CosmoBit_rollcall.hpp
	modified:   CosmoBit/src/CosmoBit.cpp
	modified:   Models/include/gambit/Models/models/CosmoNuisanceModels.hpp
	modified:   Models/src/models/CosmoNuisanceModels.cpp
	modified:   config/capabilities.dat
	modified:   config/models.dat
	modified:   yaml_files/CosmoBit_exoClass.yaml
	modified:   yaml_files/CosmoBit_testALP.yaml
	modified:   yaml_files/CosmoBit_testDecay.yaml
	modified:   yaml_files/CosmoBit_testMP.yaml
	modified:   yaml_files/CosmoBit_tutorial.yaml
	renamed:    yaml_files/include/cosmo_nuisance_params_Pantheon.yaml -> yaml_files/include/cosmo_nuisance_Pantheon.yaml

--- a/yaml_files/CosmoBit_exoClass.yaml
+++ b/yaml_files/CosmoBit_exoClass.yaml
@@ -36,7 +36,7 @@ Parameters:
  #StandardModel_mNudiff: !import include/StandardModel_mNudiff_IH_scan.yaml
 
  # Cosmological nuisance parameters (except for Planck CMB Likelihoods) 
- cosmo_nuisance_params_Pantheon: !import include/cosmo_nuisance_params_Pantheon.yaml
+ cosmo_nuisance_Pantheon: !import include/cosmo_nuisance_Pantheon.yaml
 
  # nuisance parameters in Planck likelihood
  Planck_lite: !import include/Planck_2018/Planck_lite_flat.yaml
