--- a/yaml_files/CosmoBit_testALP.yaml
+++ b/yaml_files/CosmoBit_testALP.yaml
@@ -35,7 +35,7 @@ Parameters:
  Planck_lite: !import include/Planck_2018/Planck_lite_gauss.yaml
 
  # Cosmological nuisance parameters (except for Planck CMB Likelihoods)
- cosmo_nuisance_params_Pantheon: !import include/cosmo_nuisance_params_Pantheon.yaml
+ cosmo_nuisance_Pantheon: !import include/cosmo_nuisance_Pantheon.yaml
 
  # Model Parameters of CosmoALP
  CosmoALP:
