Renaming AlterBBN_setInput -> AlterBBN_Input in yaml_files.
	modified:       yaml_files/CosmoBit_exoClass.yaml
	modified:       yaml_files/CosmoBit_inflationTest.yaml
	modified:       yaml_files/CosmoBit_smashInfl.yaml
	modified:       yaml_files/CosmoBit_testALP.yaml
	modified:       yaml_files/CosmoBit_testCosmo.yaml
	modified:       yaml_files/CosmoBit_testDecay.yaml
	modified:       yaml_files/CosmoBit_testMP.yaml
	modified:       yaml_files/CosmoBit_tutorial.yaml

--- a/yaml_files/CosmoBit_exoClass.yaml
+++ b/yaml_files/CosmoBit_exoClass.yaml
@@ -169,7 +169,7 @@ Rules:
         module: CosmoBit
 
   # to speed up Neff calc for testing
-  - capability: AlterBBN_setInput
+  - capability: AlterBBN_Input
     options:
       failsafe: 1
       err: 0
