Quite some clean-ups: - fix typo in MPLike function -> NUKE & rebuild!!     - remove duplication of function to merge_pybind_dicts, now only appears in CosmoBit_utils.     - remove code duplication when calculating MPLike Likelihoods & Observables -> Introduce new type (MPLike_result_container) storing results from       Likelihoods and Observables in function 'calc_MP_LogLikes'. To print stuff: MP_LogLikes and MP_Observables return the respective map_str_dbl     - updated some capability descriptions
	modified:   Backends/include/gambit/Backends/frontends/MontePythonLike_3_1_0.hpp
	modified:   Backends/patches/montepythonlike/3.1.0/MontePythonLike.py
	modified:   Backends/src/frontends/MontePythonLike_3_1_0.cpp
	modified:   Backends/src/frontends/classy_2_6_3.cpp
	modified:   Backends/src/frontends/classy_exo_2_7_0.cpp
	modified:   Backends/src/frontends/classy_exo_2_7_2.cpp
	modified:   CosmoBit/include/gambit/CosmoBit/CosmoBit_rollcall.hpp
	modified:   CosmoBit/include/gambit/CosmoBit/CosmoBit_types.hpp
	modified:   CosmoBit/include/gambit/CosmoBit/CosmoBit_utils.hpp
	modified:   CosmoBit/src/CosmoBit.cpp
	modified:   CosmoBit/src/CosmoBit_types.cpp
	modified:   CosmoBit/src/CosmoBit_utils.cpp
	modified:   config/capabilities.dat
	modified:   yaml_files/CosmoBit_testMP.yaml

--- a/yaml_files/CosmoBit_testMP.yaml
+++ b/yaml_files/CosmoBit_testMP.yaml
@@ -110,17 +110,10 @@ Rules:
   - capability: baseline_classy_input
     function: set_baseline_classy_input
     options:
-      #l_max: 1000
-      # /\
-      # ||  (JR) we should not set this by default when using the python wrapper: if only bg needed 
-      #     classy will complain that it did not read the input parameter.
-      #     If we use Planck through MP this should be taken care of by itself anyway
-      #output: " "   # classy + MP: even when no output specified all spectra etc. the likelihoods need
-                    # are calculated since the MP Likelihood initialisation is taking care of this for us! 
-      #lensing: "no" # heads-up: changed default to 'no'in function 'set_classy_parameters_LCDM' as well
-                    # since otherwise the automatic output setting will not work
-      #energy_deposition_function : "GAMBIT"
-
+      classy_dict:
+         P_k_max_h/Mpc: 3
+         m_ncdm: 2
+      
   # you have to set by hand if you want to set the class parameters with or without setting arguments from MontePython Likelihoods
   # if the montepythonlike backend is installed (if not it should automatically choose the function 'init_Classy_cosmo_container')
   - capability: get_classy_cosmo_container
@@ -134,7 +127,7 @@ Rules:
       Likelihoods: 
         bao_smallz_2014: default
         Pantheon: default 
-        #,"Planck_SZ"]  
+        Planck_SZ: default  
       # should eventually be possible to choose any MP like, atm only bao, Pantheon, Planck_SZ (& kids after 
       # downloading data and when commenting out line 'parser_mp.existing_file(fname)', will include that into 
       # build step soon) safe to use;
