Rename planck nuisance paramter models -> now cosmo_nuisance_Planck_..
	modified:   Backends/include/gambit/Backends/frontends/plc_2_0.hpp
	modified:   Backends/include/gambit/Backends/frontends/plc_3_0.hpp
	modified:   CosmoBit/include/gambit/CosmoBit/CosmoBit_rollcall.hpp
	modified:   CosmoBit/src/CosmoBit.cpp
	modified:   CosmoBit/src/Planck.cpp
	modified:   Models/include/gambit/Models/models/CosmoModels.hpp
	modified:   config/capabilities.dat
	modified:   config/models.dat
	modified:   yaml_files/CosmoBit_exoClass.yaml
	modified:   yaml_files/CosmoBit_testALP.yaml
	modified:   yaml_files/CosmoBit_testCosmo.yaml
	modified:   yaml_files/CosmoBit_testDecay.yaml
	modified:   yaml_files/CosmoBit_tutorial.yaml
	renamed:    yaml_files/include/Planck_2015/Planck_TTTEEE_flat.yaml -> yaml_files/include/Planck_2015/cosmo_nuisance_Planck_TTTEEE_flat.yaml
	renamed:    yaml_files/include/Planck_2015/Planck_TTTEEE_gauss.yaml -> yaml_files/include/Planck_2015/cosmo_nuisance_Planck_TTTEEE_gauss.yaml
	renamed:    yaml_files/include/Planck_2015/Planck_TT_flat.yaml -> yaml_files/include/Planck_2015/cosmo_nuisance_Planck_TT_flat.yaml
	renamed:    yaml_files/include/Planck_2015/Planck_TT_gauss.yaml -> yaml_files/include/Planck_2015/cosmo_nuisance_Planck_TT_gauss.yaml
	renamed:    yaml_files/include/Planck_2015/Planck_lite_flat.yaml -> yaml_files/include/Planck_2015/cosmo_nuisance_Planck_lite_flat.yaml
	renamed:    yaml_files/include/Planck_2015/Planck_lite_gauss.yaml -> yaml_files/include/Planck_2015/cosmo_nuisance_Planck_lite_gauss.yaml
	renamed:    yaml_files/include/Planck_2018/Planck_TTTEEE_flat.yaml -> yaml_files/include/Planck_2018/cosmo_nuisance_Planck_TTTEEE_flat.yaml
	renamed:    yaml_files/include/Planck_2018/Planck_TTTEEE_gauss.yaml -> yaml_files/include/Planck_2018/cosmo_nuisance_Planck_TTTEEE_gauss.yaml
	renamed:    yaml_files/include/Planck_2018/Planck_TT_flat.yaml -> yaml_files/include/Planck_2018/cosmo_nuisance_Planck_TT_flat.yaml
	renamed:    yaml_files/include/Pla

--- a/yaml_files/CosmoBit_exoClass.yaml
+++ b/yaml_files/CosmoBit_exoClass.yaml
@@ -39,8 +39,8 @@ Parameters:
  cosmo_nuisance_Pantheon: !import include/cosmo_nuisance_Pantheon.yaml
 
  # nuisance parameters in Planck likelihood
- Planck_lite: !import include/Planck_2018/Planck_lite_flat.yaml
- #Planck_lite: !import include/Planck_2018/Planck_lite_gauss.yaml
+ cosmo_nuisance_Planck_lite: !import include/Planck_2018/cosmo_nuisance_Planck_lite_flat.yaml
+ #cosmo_nuisance_Planck_lite: !import include/Planck_2018/cosmo_nuisance_Planck_lite_gauss.yaml
 
  # model parameters for "DecayingDM_general"
  #AnnihilatingDM_general: !import include/AnnihilatingDM_general_scan.yaml
