--- a/yaml_files/CosmoBit_testALP.yaml
+++ b/yaml_files/CosmoBit_testALP.yaml
@@ -32,7 +32,7 @@ Parameters:
  #StandardModel_mNudiff: !import include/StandardModel_mNudiff_IH_scan.yaml
 
  # nuisance parameters in Planck likelihood
- Planck_lite: !import include/Planck_2018/Planck_lite_gauss.yaml
+ cosmo_nuisance_Planck_lite: !import include/Planck_2018/cosmo_nuisance_Planck_lite_gauss.yaml
 
  # Cosmological nuisance parameters (except for Planck CMB Likelihoods)
  cosmo_nuisance_Pantheon: !import include/cosmo_nuisance_Pantheon.yaml
@@ -149,7 +149,7 @@ Rules:
     module: CosmoBit
 
 #####
-##  Since the "Planck_lite" model fits to be used by
+##  Since the "cosmo_nuisance_Planck_lite" model fits to be used by
 ##  the marginalized (lite) versions of both, the TT
 ##  and the TTTEEE, likelihoods, we need to resolve
 ##  this ambiguity manually.
