--- a/yaml_files/include/Planck_2015/cosmo_nuisance_Planck_TT_flat.yaml
+++ b/yaml_files/include/Planck_2015/cosmo_nuisance_Planck_TT_flat.yaml
@@ -1,10 +1,11 @@
 ##########################################################################
-## Nuisance parameter of "Planck_TTTEEE"
+## Nuisance parameter of "cosmo_nuisance_Planck_TT"
 ##
 ## Flat prior on all parameters. Should be scanned with
 ## "Planck_nuisance_prior_loglike"
 ##
 ## Patrick Stoecker <stoecker@physik.rwth-aachen.de>
+## 2018, Jan
 ## 2019, Aug
 ##########################################################################
 
@@ -46,54 +47,12 @@ gal545_A_143_217:
 gal545_A_217:
   prior_type: flat
   range: [0.0,400.0]
-galf_EE_A_100:
-  fixed_value: 0.055
-galf_EE_A_100_143:
-  fixed_value: 0.040
-galf_EE_A_100_217:
-  fixed_value: 0.094
-galf_EE_A_143:
-  fixed_value: 0.086
-galf_EE_A_143_217:
-  fixed_value: 0.21
-galf_EE_A_217:
-  fixed_value: 0.70
-galf_EE_index:
-  fixed_value: -2.4
-galf_TE_A_100:
-  prior_type: flat
-  range: [0.0,10.0]
-galf_TE_A_100_143:
-  prior_type: flat
-  range: [0.0,10.0]
-galf_TE_A_100_217:
-  prior_type: flat
-  range: [0.0,10.0]
-galf_TE_A_143:
-  prior_type: flat
-  range: [0.0,10.0]
-galf_TE_A_143_217:
-  prior_type: flat
-  range: [0.0,10.0]
-galf_TE_A_217:
-  prior_type: flat
-  range: [0.0,10.0]
-galf_TE_index:
-  fixed_value: -2.4
 calib_100T:
   prior_type: flat
   range: [0.0,3.0]
 calib_217T:
   prior_type: flat
   range: [0.0,3.0]
-calib_100P:
-  fixed_value: 1.021
-calib_143P:
-  fixed_value: 0.966
-calib_217P:
-  fixed_value: 1.05
-A_pol:
-  fixed_value: 1.0
 A_planck:
   prior_type: flat
   range: [0.9,1.1]
