--- a/yaml_files/include/Planck_2015/cosmo_nuisance_Planck_TT_gauss.yaml
+++ b/yaml_files/include/Planck_2015/cosmo_nuisance_Planck_TT_gauss.yaml
@@ -1,10 +1,11 @@
 ##########################################################################
-## Nuisance parameter of "Planck_TTTEEE"
+## Nuisance parameter of "cosmo_nuisance_Planck_TT"
 ##
 ## Gaussian priors on chosen parameters as recommenrded by Planck.
 ## Should not be scanned with  "Planck_nuisance_prior_loglike"
 ##
 ## Patrick Stoecker <stoecker@physik.rwth-aachen.de>
+## 2018, Jan
 ## 2019, Aug
 ##########################################################################
 
@@ -36,76 +37,28 @@ ksz_norm:
   range: [0.0,10.0]
 gal545_A_100:
   prior_type: gaussian
-  mean: [8.6]
+  mean: [7.0]
   sigs: [2.0]
 gal545_A_143:
   prior_type: gaussian
-  mean: [10.6]
+  mean: [9.0]
   sigs: [2.0]
 gal545_A_143_217:
   prior_type: gaussian
-  mean: [23.5]
+  mean: [21.0]
   sigs: [8.5]
 gal545_A_217:
   prior_type: gaussian
-  mean: [91.9]
+  mean: [80.0]
   sigs: [20.0]
-galf_EE_A_100:
-  fixed_value: 0.055
-galf_EE_A_100_143:
-  fixed_value: 0.040
-galf_EE_A_100_217:
-  fixed_value: 0.094
-galf_EE_A_143:
-  fixed_value: 0.086
-galf_EE_A_143_217:
-  fixed_value: 0.21
-galf_EE_A_217:
-  fixed_value: 0.70
-galf_EE_index:
-  fixed_value: -2.4
-galf_TE_A_100:
-  prior_type: gaussian
-  mean: [0.130]
-  sigs: [0.042]
-galf_TE_A_100_143:
-  prior_type: gaussian
-  mean: [0.130]
-  sigs: [0.036]
-galf_TE_A_100_217:
-  prior_type: gaussian
-  mean: [0.46]
-  sigs: [0.09]
-galf_TE_A_143:
-  prior_type: gaussian
-  mean: [0.207]
-  sigs: [0.072]
-galf_TE_A_143_217:
-  prior_type: gaussian
-  mean: [0.69]
-  sigs: [0.09]
-galf_TE_A_217:
-  prior_type: gaussian
-  mean: [1.938]
-  sigs: [0.54]
-galf_TE_index:
-  fixed_value: -2.4
 calib_100T:
   prior_type: gaussian
-  mean: [1.0002]
-  sigs: [0.0007]
+  mean: [0.9990004]
+  sigs: [0.001]
 calib_217T:
   prior_type: gaussian
-  mean: [0.99805]
-  sigs: [0.00065]
-calib_100P:
-  fixed_value: 1.0
-calib_143P:
-  fixed_value: 1.0
-calib_217P:
-  fixed_value: 1.0
-A_pol:
-  fixed_value: 1.0
+  mean: [0.99501]
+  sigs: [0.002]
 A_planck:
   prior_type: gaussian
   mean: [1.0]
