--- a/yaml_files/include/Planck_2015/cosmo_nuisance_Planck_lite_gauss.yaml
+++ b/yaml_files/include/Planck_2015/cosmo_nuisance_Planck_lite_gauss.yaml
@@ -1,10 +1,11 @@
 ##########################################################################
-## Nuisance parameter of "Planck_lite"
+## Nuisance parameter of "cosmo_nuisance_Planck_lite"
 ##
 ## Gaussian priors on chosen parameters as recommenrded by Planck.
 ## Should not be scanned with  "Planck_nuisance_prior_loglike"
 ##
 ## Patrick Stoecker <stoecker@physik.rwth-aachen.de>
+## 2018, Jan
 ## 2019, Aug
 ##########################################################################
 
