--- a/yaml_files/include/Planck_2018/cosmo_nuisance_Planck_lite_flat.yaml
+++ b/yaml_files/include/Planck_2018/cosmo_nuisance_Planck_lite_flat.yaml
@@ -1,11 +1,10 @@
 ##########################################################################
-## Nuisance parameter of "Planck_lite"
+## Nuisance parameter of "cosmo_nuisance_Planck_lite"
 ##
 ## Flat prior on all parameters. Should be scanned with
 ## "Planck_nuisance_prior_loglike"
 ##
 ## Patrick Stoecker <stoecker@physik.rwth-aachen.de>
-## 2018, Jan
 ## 2019, Aug
 ##########################################################################
 
