--- a/yaml_files/include/LCDM_scan.yaml
+++ b/yaml_files/include/LCDM_scan.yaml
@@ -24,3 +24,8 @@ tau_reio:
   prior_type: flat
   #range: [0.04,0.20]
   range: [0.004,0.20]
+T_cmb: 2.72548
+  # measurement 2.72548 \pm 0.00057
+  # -> vary in 3 sigma range
+  #prior_type: gaussian
+  #range: [2.72377,2.72719]
