Renamed capabilites related to setting CLASS input parameters, now: - classy_NuMasses_Nur_input - classy_baseline_params - classy_primordial_parameters - classy_final_input
	modified:   Backends/include/gambit/Backends/frontends/classy_2_6_3.hpp
	modified:   Backends/include/gambit/Backends/frontends/classy_exo_2_7_0.hpp
	modified:   Backends/include/gambit/Backends/frontends/classy_exo_2_7_2.hpp
	modified:   Backends/src/frontends/classy_2_6_3.cpp
	modified:   Backends/src/frontends/classy_exo_2_7_0.cpp
	modified:   Backends/src/frontends/classy_exo_2_7_2.cpp
	modified:   CosmoBit/include/gambit/CosmoBit/CosmoBit_rollcall.hpp
	modified:   CosmoBit/src/CosmoBit.cpp
	modified:   yaml_files/CosmoBit_exoClass.yaml
	modified:   yaml_files/CosmoBit_inflationTest.yaml
	modified:   yaml_files/CosmoBit_smashInfl.yaml
	modified:   yaml_files/CosmoBit_testALP.yaml
	modified:   yaml_files/CosmoBit_testCosmo.yaml
	modified:   yaml_files/CosmoBit_testDecay.yaml
	modified:   yaml_files/CosmoBit_testMP.yaml
	modified:   yaml_files/CosmoBit_tutorial.yaml

--- a/yaml_files/CosmoBit_inflationTest.yaml
+++ b/yaml_files/CosmoBit_inflationTest.yaml
@@ -148,16 +148,16 @@ Rules:
   #  backends:
   #    - {capability: get_classy_cosmo_object, backend: classy, version: 2.6.3}
 
-  - capability: get_classy_cosmo_container
-    function: init_classy_cosmo_container_with_MPLike
+  - capability: classy_final_input
+    function: set_classy_input_with_MPLike
   
   - capability: set_classy_parameters
     function: set_classy_parameters_parametrised_ps
     #function: set_classy_parameters_primordial_ps
   #  module: CosmoBit
 
-  - capability: baseline_classy_input
-    #function: set_baseline_classy_input
+  - capability: classy_baseline_params
+    #function: set_classy_baseline_params
     options:
       classy_dict:
         output: tCl
