--- a/yaml_files/CosmoBit_testDecay.yaml
+++ b/yaml_files/CosmoBit_testDecay.yaml
@@ -138,8 +138,8 @@ Rules:
 ##
 ####
 
-  - capability: get_classy_cosmo_container
-    function: init_classy_cosmo_container
+  - capability: classy_final_input
+    function: set_classy_input
 
 #####
 ##
